# raveneye

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  raveneyebuildspec.md
data/: sample_scenario.json  sample_sim.json
docs/: architecture.md  bidding_interface.md  delivery_pipeline.md  event_taxonomy.md  mechanism_interface.md  orbital_model.md  viewer_guide.md
raveneye/cli/: build_scenario.py  generate.py
raveneye/delivery/: __init__.py  pipeline.py
raveneye/mechanism/: __init__.py  base.py  build.py  greedy.py  ssi.py
raveneye/orbital/: __init__.py  access.py  build.py  constellations.py  coverage.py  propagate.py  tle_ingest.py
raveneye/scenario/: __init__.py  build.py
raveneye/sim/: __init__.py  bids.py  build.py  events.py  locations.py  phases.py  scripted.py  stakeholders.py  stochastic.py
raveneye/viewer/: build_viewer.py  template.html
raveneye/viewer/globe/: board.js  coverage.js  explainer.js  ground.js  index.html  main.js  orbits.js  panels.js  style.css  timeline.js
scripts/: verify_position_agreement.py
tests/: test_access.py  test_bids.py  test_constellations.py  test_coverage.py  test_delivery_pipeline.py  test_determinism.py  test_events.py  test_fixture_dir.py  test_mechanism_greedy.py  test_mechanism_ssi.py  test_phases.py  test_propagate.py  test_scenario_build.py  test_supply_build.py  test_tle_ingest.py  test_viewer_staging.py
tests/fixtures/: tles.txt
tests/fixtures/multi_tles/: blacksky.txt  capella.txt  iceye.txt  maxar_wv.txt  planet_dove.txt  skysat.txt
