[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "raveneye"
version = "0.1.0"
description = "Multi-constellation EO tasking simulation for evaluating satellite-tasking allocation mechanisms."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "RavenEye contributors" }]
keywords = ["satellite", "simulation", "tasking", "eo", "isr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
raveneye-generate = "raveneye.cli.generate:main"

[tool.setuptools]
packages = [
    "raveneye",
    "raveneye.cli",
    "raveneye.sim",
    "raveneye.viewer",
]

[tool.setuptools.package-data]
"raveneye.viewer" = ["template.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
